fix spacing on mobile about page

--- a/assets/styles/partials/_page-about.scss
+++ b/assets/styles/partials/_page-about.scss
@@ -216,7 +216,7 @@
 		}
 		
 		.about-us-bottom {
-			padding: 30px 0 20px;
+			padding: 25px 0 20px;
 		}
 		
 		h1 {
