--- a/assets/styles/partials/_page-contact.scss
+++ b/assets/styles/partials/_page-contact.scss
@@ -247,7 +247,10 @@
 	}
 	
 	.icon-envelope {
+		width: 40px;
+		height: 22px;
         background: url(assets/images/email.png) no-repeat;
+		background-size: 100%;
         
         @media  only screen and (-webkit-min-device-pixel-ratio: 1.5),
             only screen and (   min--moz-device-pixel-ratio: 1.5),
