--- a/assets/styles/partials/_page.scss
+++ b/assets/styles/partials/_page.scss
@@ -435,3 +435,9 @@
 		}
 	}
 }
+
+@media only screen and (width: 320px) {
+    .blog h1 {
+        font-size: 35px;
+    }
+}
